v3.4.11 (XXXX-XX-XX)
--------------------

* Updated ArangoDB Starter to 0.14.15.

* Optimized Web UI styling for ArangoSearch Views when in read-only mode.

* Fixed issue #11104 case with complex condition on second branch of OR
  operator.

* Update OpenLDAP to 2.4.50.

* Fixed issue #11525: Address security vulnerability by updating Swagger-UI
  dependency (upgraded Swagger UI to 3.25.1).

* Update arangosync to 0.7.5.

* Fixed issue ES-605: arangodump broken when using encryption.

* Do not always loadPlan from agency when collections of a database are listed.
  This is particularly important for arangosync.


v3.4.10 (2020-04-24)
--------------------

* Don't invoke collection key ranges compaction after performing a truncate
  operation on a RocksDB storage engine collection via the REST API's truncate
  endpoint.

  The compaction was previously done to make RocksDB physically free data of key
  ranges that were supposed to be empty after the truncate, but it seems that
  the used version of RocksDB is struggling to achieve that goal. Although it
  does compact the ranges, it seems to read a lot of extra data from unrelated
  ranges as well, which blows up the overall time required to do the
  compactions.
  Most recent versions of RocksDB do not seem to have this problem anymore.
  But without upgrading RocksDB to the latest version the most sensible fix is
  to turn off the manual compaction and rely on RocksDB eventually freeing the
  key ranges that are empty after a truncate.

* Fixed issue #11104: `ANALYZER` function doesn't correctly process `!= OR`
  queries.

* Honor `cacheEnabled` attribute when updating the properties of a collection
  in case of the cluster. Previously, this attribute was ignored in the cluster,
  but it shouldn't have been.

* Updated arangosync to 0.7.3.

* Updated ArangoDB Starter to 0.14.14.

* Fix issue #10897, using COLLECT in a subquery could lead to unexpected and
  confusing error messages.
