@@ -45,6 +45,7 @@ std::string const curColPrefix = "/Current/Collections/";
 std::string const blockedServersPrefix = "/Supervision/DBServers/";
 std::string const blockedShardsPrefix = "/Supervision/Shards/";
 std::string const planVersion = "/Plan/Version";
+std::string const currentVersion = "/Current/Version";
 std::string const plannedServers = "/Plan/DBServers";
 std::string const healthPrefix = "/Supervision/Health/";
 std::string const asyncReplLeader = "/Plan/AsyncReplication/Leader";
@@ -576,6 +577,23 @@ void Job::addIncreasePlanVersion(Builder& trx) {
     VPackObjectBuilder guard(&trx);
     trx.add("op", VPackValue("increment"));
   }
+}
+
+void Job::addIncreaseCurrentVersion(Builder& trx) {
+  trx.add(VPackValue(currentVersion));
+  {
+    VPackObjectBuilder guard(&trx);
+    trx.add("op", VPackValue("increment"));
+  }
+}
+
+void Job::addIncreaseRebootId(Builder& trx, std::string const& server) {
+  trx.add(VPackValue(curServersKnown + server + "/rebootId"));
+  {
+    VPackObjectBuilder guard(&trx);
+    trx.add("op", VPackValue("increment"));
+  }
+  addIncreaseCurrentVersion(trx);
 }
 
 void Job::addRemoveJobFromSomewhere(Builder& trx, std::string const& where,
