@@ -3255,9 +3255,27 @@ void ClusterInfo::loadServers() {
         _serversProt.doneVersion = storedVersion;
         _serversProt.isValid = true;
       }
-      // RebootTracker has its own mutex, and doesn't strictly need to be in sync
-      // with the other members.
-      rebootTracker().updateServerState(_serversKnown.rebootIds());
+      // Our own RebootId might have changed if we have been FAILED at least once
+      // since our last actual reboot, let's update it:
+      auto rebootIds = _serversKnown.rebootIds();
+      auto* serverState = ServerState::instance();
+      auto it = rebootIds.find(serverState->getId());
+      if (it != rebootIds.end()) {
+        // should always be ok
+        if (serverState->getRebootId() != it->second) {
+          serverState->setRebootId(it->second);
+          LOG_TOPIC("feaab", INFO, Logger::CLUSTER)
+              << "Updating my own rebootId to " << it->second.value();
+        }
+      } else {
+        LOG_TOPIC("feaaa", WARN, Logger::CLUSTER)
+            << "Cannot find my own rebootId in the list of known servers, this "
+               "is very strange and should not happen, if this persists, please "
+               "report this error!";
+      }
+      // RebootTracker has its own mutex, and doesn't strictly need to  be in
+      // sync with the other members.
+      rebootTracker().updateServerState(rebootIds);
       return;
     }
   }
